--- a/app/src/main/res/layout/activity_grocerylists.xml
+++ b/app/src/main/res/layout/activity_grocerylists.xml
@@ -2,7 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent">
-    <fragment android:name="com.driving.groceries.ui.login.ItemFragment"
+    <fragment android:name="com.groceries.ui.ItemFragment"
         android:id="@+id/list"
         android:layout_weight="1"
         android:layout_height="0dp"
