--- a/app/src/main/res/layout/activity_grocerylistentries.xml
+++ b/app/src/main/res/layout/activity_grocerylistentries.xml
@@ -7,4 +7,12 @@
         android:layout_weight="1"
         android:layout_height="0dp"
         android:layout_width="match_parent" />
+
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:id="@+id/fab"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="end|bottom"
+        android:src="@drawable/ic_add_black_24dp"
+        android:layout_margin="16dp" />
 </LinearLayout>
