--- a/app/src/main/res/layout/fragment_grocery_list_entries.xml
+++ b/app/src/main/res/layout/fragment_grocery_list_entries.xml
@@ -10,4 +10,4 @@
     android:layout_marginRight="16dp"
     app:layoutManager="LinearLayoutManager"
     tools:context="com.groceries.ui.groceryList.GroceryListFragment"
-    tools:listitem="@layout/fragment_item" />
+    tools:listitem="@layout/fragment_grocery_list" />
