--- a/app/src/main/res/layout/activity_create_grocerylist_entry.xml
+++ b/app/src/main/res/layout/activity_create_grocerylist_entry.xml
@@ -9,7 +9,7 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
-    tools:context="com.groceries.ui.groceryList.CreateGroceryListActivity">
+    tools:context="com.groceries.ui.activity.CreateGroceryListActivity">
 
     <EditText
         android:id="@+id/name"
