--- a/app/src/main/res/layout/activity_grocerylists.xml
+++ b/app/src/main/res/layout/activity_grocerylists.xml
@@ -2,8 +2,8 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent">
-    <fragment android:name="com.groceries.ui.groceryList.GroceryListFragment"
-        android:id="@+id/list"
+    <FrameLayout
+        android:id="@+id/grocery_fragment"
         android:layout_weight="1"
         android:layout_height="0dp"
         android:layout_width="match_parent" />
