--- a/app/src/main/res/layout/activity_grocerylists.xml
+++ b/app/src/main/res/layout/activity_grocerylists.xml
@@ -15,4 +15,12 @@
         android:layout_gravity="end|bottom"
         android:src="@drawable/ic_add_black_24dp"
         android:layout_margin="16dp" />
+
+    <com.google.android.material.bottomnavigation.BottomNavigationView
+            xmlns:app="http://schema.android.com/apk/res/res-auto"
+            android:id="@+id/navigation"
+            android:layout_width="match_parent"
+            android:layout_height="56dp"
+            android:layout_gravity="start"
+            app:menu="@menu/main_navigation_bottom" />
 </LinearLayout>
