--- a/app/src/main/res/layout/fragment_invitation.xml
+++ b/app/src/main/res/layout/fragment_invitation.xml
@@ -10,4 +10,16 @@
         android:layout_height="wrap_content"
         android:layout_margin="@dimen/text_margin"
         android:textAppearance="?attr/textAppearanceListItem" />
+
+    <ImageView
+            android:id="@+id/ack"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:src="@drawable/ic_check_black_24dp" />
+
+    <ImageView
+            android:id="@+id/deny"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:src="@drawable/ic_remove_circle_outline_black_24dp" />
 </LinearLayout>
