--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -9,7 +9,7 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
-        tools:context="com.groceries.ui.login.LoginFragment">
+        tools:context="com.groceries.ui.login_registration.LoginFragment">
 
     <EditText
         android:id="@+id/username"
