--- a/app/src/main/res/layout/fragment_grocery_list.xml
+++ b/app/src/main/res/layout/fragment_grocery_list.xml
@@ -38,7 +38,7 @@
                         android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                         android:textColor="#263238" />
 
-                <TextView
+                <!--TextView
                         android:id="@+id/desc"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
@@ -47,16 +47,15 @@
                         android:maxLines="2"
                         android:text=""
                         android:textAppearance="@style/TextAppearance.AppCompat.Small"
-                        android:textColor="#999999" />
+                        android:textColor="#999999" /-->
             </LinearLayout>
 
-            <ImageView
-                    android:id="@+id/invite"
+            <TextView
+                    android:id="@+id/numberInfo"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="10dp"
-                    android:layout_weight="1"
-                    android:src="@drawable/ic_person_add_black_24dp" />
+                    android:layout_weight="1" />
 
         </LinearLayout>
 
