--- a/app/src/main/res/layout/activity_create_invitation.xml
+++ b/app/src/main/res/layout/activity_create_invitation.xml
@@ -9,7 +9,7 @@
         android:paddingTop="@dimen/activity_vertical_margin"
         android:paddingRight="@dimen/activity_horizontal_margin"
         android:paddingBottom="@dimen/activity_vertical_margin"
-        tools:context="com.groceries.ui.activity.CreateInvitationActivity">
+        tools:context="com.remembrall.ui.activity.CreateInvitationActivity">
 
     <EditText
             android:id="@+id/email"
