--- a/app/src/main/res/layout/fragment_grocery_list_entries.xml
+++ b/app/src/main/res/layout/fragment_grocery_list_entries.xml
@@ -9,11 +9,11 @@
     <androidx.recyclerview.widget.RecyclerView xmlns:app="http://schemas.android.com/apk/res-auto"
             xmlns:tools="http://schemas.android.com/tools"
             android:id="@+id/list"
-            android:name="com.groceries.ui.login.ItemFragment"
+            android:name="com.remembrall.ui.login.ItemFragment"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             app:layoutManager="LinearLayoutManager"
-            tools:context="com.groceries.ui.groceryList.GroceryListFragment"
+            tools:context="com.remembrall.ui.groceryList.GroceryListFragment"
             tools:listitem="@layout/fragment_grocery_list" />
 
 </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
