--- a/app/src/main/res/layout/fragment_invitations.xml
+++ b/app/src/main/res/layout/fragment_invitations.xml
@@ -3,11 +3,11 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/list"
-    android:name="com.groceries.ui.login.ItemFragment"
-    android:layout_width="match_parent"
+        android:name="com.remembrall.ui.login.ItemFragment"
+        android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:layout_marginLeft="16dp"
     android:layout_marginRight="16dp"
-    app:layoutManager="LinearLayoutManager"
-    tools:context="com.groceries.ui.invitation.InvitationFragment"
-    tools:listitem="@layout/fragment_grocery_list" />
+        app:layoutManager="LinearLayoutManager"
+        tools:context="com.remembrall.ui.invitation.InvitationFragment"
+        tools:listitem="@layout/fragment_grocery_list" />
