Marking of selected items

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,4 +3,5 @@
     <color name="colorPrimary">#008577</color>
     <color name="colorPrimaryDark">#00A891</color>
     <color name="colorAccent">#FF00A891</color>
+    <color name="background">#EEEEEE</color>
 </resources>
