--- a/app/src/main/res/layout/fragment_grocery_list.xml
+++ b/app/src/main/res/layout/fragment_grocery_list.xml
@@ -3,6 +3,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:clickable="true"
+        android:background="@drawable/layout_bg_rounded"
         android:orientation="vertical">
 
     <LinearLayout
@@ -38,16 +39,6 @@
                         android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                         android:textColor="#263238" />
 
-                <!--TextView
-                        android:id="@+id/desc"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_marginEnd="10dp"
-                        android:clickable="false"
-                        android:maxLines="2"
-                        android:text=""
-                        android:textAppearance="@style/TextAppearance.AppCompat.Small"
-                        android:textColor="#999999" /-->
             </LinearLayout>
 
             <TextView
@@ -61,9 +52,4 @@
 
     </LinearLayout>
 
-    <View
-            android:layout_width="match_parent"
-            android:layout_height="1dp"
-            android:layout_marginTop="5dp"
-            android:background="#e6e6e6" />
 </LinearLayout>
