--- a/app/src/main/res/layout/fragment_grocery_list_entry.xml
+++ b/app/src/main/res/layout/fragment_grocery_list_entry.xml
@@ -1,8 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:orientation="horizontal">
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="@drawable/layout_bg_rounded"
+        android:orientation="horizontal">
 
     <LinearLayout
             android:id="@+id/parentLayout"
@@ -49,11 +50,6 @@
                             android:layout_weight="1" />
                 </LinearLayout>
 
-                <View
-                        android:layout_width="match_parent"
-                        android:layout_height="1dp"
-                        android:layout_marginTop="5dp"
-                        android:background="#e6e6e6" />
             </LinearLayout>
 
         </LinearLayout>
