--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <color name="colorPrimary">#008577</color>
-    <color name="colorPrimaryDark">#00A891</color>
-    <color name="colorAccent">#FF00A891</color>
+    <color name="colorPrimaryDark">#005A4E</color>
+    <color name="colorAccent">#00BFA5</color>
     <color name="background">#EEEEEE</color>
 </resources>
