Fix scrolling for last item - allow to scroll a little bit longer as the floating button hides the element

--- a/app/src/main/res/layout/fragment_grocery_lists.xml
+++ b/app/src/main/res/layout/fragment_grocery_lists.xml
@@ -13,6 +13,8 @@
             android:layout_height="match_parent"
             app:layoutManager="LinearLayoutManager"
             tools:context="com.remembrall.ui.groceryList.GroceryListFragment"
+            android:clipToPadding="false"
+            android:paddingBottom="75dp"
             tools:listitem="@layout/fragment_grocery_list" />
 
 </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
