--- a/app/src/main/res/layout/fragment_grocery_list.xml
+++ b/app/src/main/res/layout/fragment_grocery_list.xml
@@ -24,6 +24,6 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="2"
-            android:layoutDirection="rtl" />
+            android:gravity="right" />
 
 </LinearLayout>
