--- a/app/src/main/res/menu/main_navigation_bottom.xml
+++ b/app/src/main/res/menu/main_navigation_bottom.xml
@@ -4,6 +4,12 @@
             android:id="@+id/action_lists"
             android:title="@string/navigation_lists"
             android:icon="@drawable/ic_list_black_24dp" />
+
+    <item
+            android:id="@+id/action_archived_lists"
+            android:icon="@drawable/ic_baseline_archive_24"
+            android:title="@string/archived_navigation_lists" />
+
     <item
             android:id="@+id/action_invitations"
             android:title="@string/navigation_invitations"
