--- a/app/src/main/res/menu/menu_grocery_list.xml
+++ b/app/src/main/res/menu/menu_grocery_list.xml
@@ -5,18 +5,24 @@
             android:id="@+id/action_archive"
             android:icon="@drawable/ic_baseline_archive_24"
             android:orderInCategory="10"
-            android:title="Edit"
-            app:showAsAction="always" />
+            android:title="Archive"
+            app:showAsAction="ifRoom" />
+    <item
+            android:id="@+id/action_unarchive"
+            android:icon="@drawable/ic_baseline_unarchive_24"
+            android:orderInCategory="10"
+            android:title="Unarchive"
+            app:showAsAction="ifRoom" />
     <item
             android:id="@+id/action_edit"
             android:icon="@drawable/ic_baseline_edit_24"
             android:orderInCategory="10"
             android:title="Edit"
-            app:showAsAction="always" />
+            app:showAsAction="ifRoom" />
     <item
             android:id="@+id/action_delete"
             android:icon="@drawable/ic_baseline_delete_24"
             android:orderInCategory="10"
             android:title="Delete"
-            app:showAsAction="always" />
+            app:showAsAction="ifRoom" />
 </menu>
