--- a/app/src/main/res/layout/fragment_invitation.xml
+++ b/app/src/main/res/layout/fragment_invitation.xml
@@ -11,9 +11,8 @@
     <TextView
         android:id="@+id/title"
         android:layout_width="0dp"
-        android:layout_weight="5"
-        android:layout_height="wrap_content"
-        android:layout_margin="@dimen/text_margin"
+            android:layout_weight="7"
+            android:layout_height="wrap_content"
         android:textAppearance="?attr/textAppearanceListItem" />
 
     <ImageView
@@ -21,6 +20,7 @@
             android:layout_weight="1"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:gravity="end"
             android:src="@drawable/ic_check_black_24dp" />
 
     <ImageView
@@ -28,5 +28,6 @@
             android:layout_weight="1"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:gravity="end"
             android:src="@drawable/ic_remove_circle_outline_black_24dp" />
 </LinearLayout>
