--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,4 +4,5 @@
     <color name="colorPrimaryDark">#005A4E</color>
     <color name="colorAccent">#00BFA5</color>
     <color name="background">#EEEEEE</color>
+    <color name="blue">#0030BF</color>
 </resources>
