--- a/app/src/main/res/menu/main_navigation_bottom.xml
+++ b/app/src/main/res/menu/main_navigation_bottom.xml
@@ -14,4 +14,9 @@
             android:id="@+id/action_invitations"
             android:title="@string/navigation_invitations"
             android:icon="@drawable/ic_group_add_black_24dp" />
+
+    <item
+            android:id="@+id/action_profile"
+            android:icon="@drawable/ic_person_add_black_24dp"
+            android:title="@string/profile" />
 </menu>
