--- a/app/src/main/res/layout/dialog_grocery_list_entry.xml
+++ b/app/src/main/res/layout/dialog_grocery_list_entry.xml
@@ -13,7 +13,7 @@
 
     <EditText
             android:id="@+id/name"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:autofillHints="@string/create_grocerylist_name"
             android:hint="@string/create_grocerylist_name"
