--- a/app/src/main/res/layout/fragment_grocery_list_entry.xml
+++ b/app/src/main/res/layout/fragment_grocery_list_entry.xml
@@ -14,6 +14,15 @@
             android:id="@+id/name"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_weight="8"
+            android:clickable="false"
+            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
+            android:textColor="#263238" />
+
+    <TextView
+            android:id="@+id/quantity_with_unit"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:layout_weight="9"
             android:clickable="false"
             android:textAppearance="@style/TextAppearance.AppCompat.Medium"
