--- a/app/src/main/res/values/quantity_units.xml
+++ b/app/src/main/res/values/quantity_units.xml
@@ -1,10 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+    <!-- Matching code of a quantity-unit is at the same position in the array 'quantity_units_codes'-->
     <string-array name="quantity_units">
-        <item code="l">@string/liter</item>
-        <item code="p">@string/piece</item>
-        <item code="ml">@string/milli_liter</item>
-        <item code="g">@string/gram</item>
-        <item code="kg">@string/kilo_gram</item>
+        <item>@string/liter</item>
+        <item>@string/piece</item>
+        <item>@string/milli_liter</item>
+        <item>@string/gram</item>
+        <item>@string/kilo_gram</item>
+    </string-array>
+    <!-- These codes must match the codes used by the backend -->
+    <string-array name="quantity_units_codes">
+        <item>L</item>
+        <item>P</item>
+        <item>ML</item>
+        <item>G</item>
+        <item>KG</item>
     </string-array>
 </resources>
