--- a/app/src/main/res/layout/fragment_grocery_list.xml
+++ b/app/src/main/res/layout/fragment_grocery_list.xml
@@ -10,14 +10,27 @@
         android:orientation="horizontal"
         android:padding="10dp">
 
-    <TextView
-            android:id="@+id/name"
+    <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="8"
-            android:clickable="false"
-            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
-            android:textColor="#263238" />
+            android:orientation="vertical">
+
+        <TextView
+                android:id="@+id/name"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:clickable="false"
+                android:textAppearance="@style/TextAppearance.AppCompat.Medium" />
+
+        <TextView
+                android:id="@+id/participants"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:clickable="false"
+                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
+                android:textSize="12sp" />
+    </LinearLayout>
 
     <TextView
             android:id="@+id/numberInfo"
