--- a/app/src/main/res/layout/fragment_grocery_list_entry.xml
+++ b/app/src/main/res/layout/fragment_grocery_list_entry.xml
@@ -16,8 +16,7 @@
             android:layout_height="wrap_content"
             android:layout_weight="8"
             android:clickable="false"
-            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
-            android:textColor="#263238" />
+            android:textAppearance="@style/TextAppearance.AppCompat.Medium" />
 
     <TextView
             android:id="@+id/quantity_with_unit"
@@ -25,8 +24,7 @@
             android:layout_height="wrap_content"
             android:layout_weight="2"
             android:clickable="false"
-            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
-            android:textColor="#263238" />
+            android:textAppearance="@style/TextAppearance.AppCompat.Medium" />
 
     <CheckBox
             android:id="@+id/checked"
